@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SL</title>
+    <title>SL Poems: Young</title>
     <link rel="icon" type="image/png" href="../droplet-favicon.png" />
     <link rel="icon" type="image/png" href="../Droplet.png" />
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" />
